--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     implementation 'io.github.kotlin-telegram-bot.kotlin-telegram-bot:telegram:6.0.4'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
 }
 
 compileKotlin {
